@@ -5,6 +5,7 @@ import com.google.inject.Inject;
 import com.google.inject.assistedinject.Assisted;
 import org.apache.logging.log4j.Logger;
 import org.hibernate.Session;
+import org.hibernate.StaleStateException;
 import org.hibernate.resource.transaction.spi.TransactionStatus;
 import org.joda.time.DateTime;
 import ua.com.fielden.platform.dao.CommonEntityDao;
@@ -32,6 +33,7 @@ import ua.com.fielden.platform.entity.query.model.AggregatedResultQueryModel;
 import ua.com.fielden.platform.entity.query.model.EntityResultQueryModel;
 import ua.com.fielden.platform.entity.query.model.FillModelBuilder;
 import ua.com.fielden.platform.entity.query.model.IFillModel;
+import ua.com.fielden.platform.entity.validation.EntityExistsValidator;
 import ua.com.fielden.platform.error.Result;
 import ua.com.fielden.platform.meta.EntityMetadata;
 import ua.com.fielden.platform.meta.IDomainMetadata;
@@ -44,6 +46,7 @@ import ua.com.fielden.platform.types.tuples.T2;
 import ua.com.fielden.platform.utils.EntityUtils;
 import ua.com.fielden.platform.utils.IUniversalConstants;
 
+import javax.annotation.Nullable;
 import javax.persistence.OptimisticLockException;
 import java.lang.reflect.Field;
 import java.util.*;
@@ -53,6 +56,7 @@ import java.util.function.Function;
 import java.util.function.Supplier;
 import java.util.stream.Collectors;
 
+import static com.google.common.collect.ImmutableSet.toImmutableSet;
 import static java.lang.String.format;
 import static java.util.Objects.requireNonNull;
 import static java.util.Optional.empty;
@@ -66,15 +70,20 @@ import static ua.com.fielden.platform.entity.ActivatableAbstractEntity.REF_COUNT
 import static ua.com.fielden.platform.entity.query.fluent.EntityQueryUtils.from;
 import static ua.com.fielden.platform.entity.query.fluent.EntityQueryUtils.select;
 import static ua.com.fielden.platform.entity.query.model.IFillModel.emptyFillModel;
+import static ua.com.fielden.platform.entity.validation.ActivePropertyValidator.ERR_INACTIVE_REFERENCES;
+import static ua.com.fielden.platform.entity.validation.EntityExistsValidator.ERR_ENTITY_EXISTS_BUT_NOT_ACTIVE;
 import static ua.com.fielden.platform.entity.validation.custom.DefaultEntityValidator.validateWithoutCritOnly;
 import static ua.com.fielden.platform.eql.dbschema.HibernateMappingsGenerator.ID_SEQUENCE_NAME;
+import static ua.com.fielden.platform.error.Result.failure;
 import static ua.com.fielden.platform.reflection.ActivatableEntityRetrospectionHelper.*;
 import static ua.com.fielden.platform.reflection.Reflector.isMethodOverriddenOrDeclared;
 import static ua.com.fielden.platform.reflection.TitlesDescsGetter.getEntityTitleAndDesc;
+import static ua.com.fielden.platform.reflection.TitlesDescsGetter.getTitleAndDesc;
 import static ua.com.fielden.platform.types.tuples.T2.t2;
 import static ua.com.fielden.platform.utils.DbUtils.nextIdValue;
 import static ua.com.fielden.platform.utils.EntityUtils.areEqual;
 import static ua.com.fielden.platform.utils.EntityUtils.equalsEx;
+import static ua.com.fielden.platform.utils.MiscUtilities.optional;
 import static ua.com.fielden.platform.utils.Validators.findActiveDeactivatableDependencies;
 
 /**
@@ -87,6 +96,8 @@ import static ua.com.fielden.platform.utils.Validators.findActiveDeactivatableDe
 public final class PersistentEntitySaver<T extends AbstractEntity<?>> implements IEntityActuator<T> {
     public static final String ERR_COULD_NOT_RESOLVE_CONFLICTING_CHANGES = "Could not resolve conflicting changes.";
     public static final String ERR_OPTIMISTIC_LOCK = "%s [%s] was updated or deleted by another user. Please try saving again.";
+    public static final String ERR_CONFLICTING_CONCURRENT_CHANGE = "There was a conflicting change by another user. Please try saving again.";
+    // private static final String ERR_
 
     private final Supplier<Session> session;
     private final Supplier<String> transactionGuid;
@@ -334,7 +345,7 @@ public final class PersistentEntitySaver<T extends AbstractEntity<?>> implements
         final AggregatedResultQueryModel model = select(createQueryByKey(dbVersionProvider.dbVersion(), entityType, keyType, false, entity.getKey())).yield().prop(AbstractEntity.ID).as(AbstractEntity.ID).modelAsAggregate();
         final List<EntityAggregates> ids = entityFetcher.getEntities(session, from(model).lightweight().model());
         final int count = ids.size();
-        if (count == 1 && entity.getId().longValue() != ((Number) ids.get(0).get(AbstractEntity.ID)).longValue()) {
+        if (count == 1 && entity.getId().longValue() != ((Number) ids.getFirst().get(AbstractEntity.ID)).longValue()) {
             throw new EntityAlreadyExists("%s [%s] already exists.".formatted(getEntityTitleAndDesc(entity.getType()).getKey(), entity));
         }
 
@@ -346,36 +357,52 @@ public final class PersistentEntitySaver<T extends AbstractEntity<?>> implements
             throw new EntityCompanionException(format("%s %s [%s] could not be saved.", ERR_COULD_NOT_RESOLVE_CONFLICTING_CHANGES, getEntityTitleAndDesc(entityType).getKey(), entity));
         }
 
+        // From this point on, until `session.flush()`, if the persisted version of `entity` is modified
+        // (i.e., `persistedEntity.version` is no longer the actual persisted version),
+        // then `session.flush()` will fail with StaleObjectException.
+        // This may happen if and only if there is a concurrent update to the entity during this interval.
+
         // reconstruct entity fetch model for future retrieval at the end of the method call
         final Optional<fetch<T>> entityFetchOption = skipRefetching ? empty() : (maybeFetch.isPresent() ? maybeFetch : of(FetchModelReconstructor.reconstruct(entity)));
+
+        // Need to record the persisted active status before `persistedEntity` is modified.
+        final Optional<Boolean> persistedIsActive = entity instanceof ActivatableAbstractEntity ? optional(persistedEntity.get(ACTIVE)) : Optional.empty();
 
         // proceed with property assignment from entity to persistent entity, which in case of a resolvable conflict acts like a fetch/rebase in git
         // it is essential that if a property is of an entity type it should be re-associated with the current session before being set
         // the easiest way to do that is to load entity by id using the current session
         for (final MetaProperty<?> prop : entity.getDirtyProperties()) {
-            // set of meta-properties and set of properties with metadata may be different, but persistent properties
-            // must always be present in both sets
-            final Optional<PropertyMetadata> propMetadata = entityMetadata.property(prop).orElseThrow(Function.identity());
-            if (propMetadata.filter(PropertyMetadata::isPersistent).isPresent()) {
+            // Set of meta-properties and set of properties with metadata may be different, but persistent properties
+            // must always be present in both sets.
+            final var maybePropMetadata = entityMetadata.property(prop).orElseThrow(Function.identity());
+            if (maybePropMetadata.filter(PropertyMetadata::isPersistent).isPresent()) {
                 final Object value = prop.getValue();
                 if (shouldProcessAsActivatable(entity, prop)) {
-                    handleDirtyActivatableProperty(entity, persistedEntity, prop, value, session);
-                } else if (value instanceof AbstractEntity && !(value instanceof PropertyDescriptor) && !(value instanceof AbstractUnionEntity)) {
-                    persistedEntity.set(prop.getName(), session.load(((AbstractEntity<?>) value).getType(), ((AbstractEntity<?>) value).getId()));
+                    handleDirtyActivatableProperty(entity, persistedEntity, prop, session);
+                } else if (value instanceof AbstractEntity<?> valueAsEntity && !(value instanceof PropertyDescriptor) && !(value instanceof AbstractUnionEntity)) {
+                    persistedEntity.set(prop.getName(), session.load(valueAsEntity.getType(), valueAsEntity.getId()));
                 } else {
                     persistedEntity.set(prop.getName(), value);
                 }
             }
-        } // end of processing dirty properties
+        }
 
-        // handle ref counts of non-dirty activatable properties
+        // Handle ref counts of non-dirty activatable properties
         if (entity instanceof ActivatableAbstractEntity) {
-            handleNonDirtyActivatableIfNecessary(entity, persistedEntity, session);
+            try {
+                handleNonDirtyActivatableIfNecessary(entity, persistedEntity, persistedIsActive.get(), session);
+            } catch (final StaleStateException ex) {
+                // StaleStateException may occur when a stale object is loaded from a session (via `session.load`).
+                // For example, two entities concurrently begin referencing some other entity, thereby incrementing its `refCount` concurrently.
+                // The exception occurs when a thread loads the modified entity for the second time, after its concurrent modification
+                // (the first time it must have been loaded before its modification).
+                throw new EntityCompanionException(ERR_CONFLICTING_CONCURRENT_CHANGE, ex);
+            }
         }
 
         // perform meta-data assignment to capture the information about this modification
-        if (entity instanceof AbstractPersistentEntity) {
-            assignLastModificationInfo((AbstractPersistentEntity<?>) entity, (AbstractPersistentEntity<?>) persistedEntity);
+        if (entity instanceof AbstractPersistentEntity<?> entityAsPersistent) {
+            assignLastModificationInfo(entityAsPersistent, (AbstractPersistentEntity<?>) persistedEntity);
         }
 
         // update entity
@@ -402,63 +429,45 @@ public final class PersistentEntitySaver<T extends AbstractEntity<?>> implements
                   entityFetchOption.map(fetch -> findById.find(persistedEntity.getId(), fetch, fillModel.get())).orElse(persistedEntity));
     }
 
-    /**
-     * Handles dirty activatable property in a special way that manages refCount of its current and previous values, but only if the entity being saving is an activatable that does
-     * not fall into the category of those with type that governs deactivatable dependency of the entity being saved.
-     *
-     * @param entity
-     * @param persistedEntity
-     * @param prop
-     * @param value
-     * @param session
-     */
-    private void handleDirtyActivatableProperty(final T entity, final T persistedEntity, final MetaProperty<?> prop, final Object value, final Session session) {
+    /// Handles dirty property `prop` in `entity`, whose type is an activatable entity, by managing the `refCount` of its current and previous values.
+    ///
+    /// @param entity  the activatable entity being saved
+    /// @param persistedEntity  persisted version (Hibernate proxy) of the entity being saved
+    /// @param prop  the dirty property whose type is an activatable entity
+    /// @param session  the current session
+    private void handleDirtyActivatableProperty(final T entity, final T persistedEntity, final MetaProperty<?> prop, final Session session) {
         final String propName = prop.getName();
-        // dirty activatable handling only needs to be performed if the current and persisted values are different
-        // at this stage of program execution, these values can only be the same iff a concurrent modification to the same value took place (i.e. non-conflicting concurrent change)
-        // in such case recalculation of refCount for respective entities has already been performed, and double-dipping should be avoided
+        final Object value = prop.getValue();
+        // If the current and persisted values for `prop` are the same, nothing needs to be done.
+        // At this stage, these values can only be the same iff a non-conflicting concurrent modification occurred.
+        // In such case, recalculation of `refCount` for the referenced entity has already been performed, and double-dipping should be avoided.
         if (equalsEx(value, persistedEntity.get(propName))) {
             return;
         }
-        // if value is null then an activatable entity has been dereferenced and its refCount needs to be decremented
-        // but only if the dereferenced value is an active activatable and the entity being saved is not being made active -- thus previously it was not counted as a reference
+        // If the new value is `null`, an activatable entity has been dereferenced and its `refCount` may need to be decremented.
         if (value == null) {
-            final MetaProperty<Boolean> activeProp = entity.getProperty(ACTIVE);
-            final boolean beingActivated = activeProp.isDirty() && activeProp.getValue();
-            // get the latest value of the dereferenced activatable as the current value of the persisted entity version from the database and decrement its ref count
-            // original property value should not be null, otherwise property would not become dirty by assigning null
-            final ActivatableAbstractEntity<?> origValue = (ActivatableAbstractEntity<?>) entity.getProperty(propName).getOriginalValue();
-            final ActivatableAbstractEntity<?> persistedValue = (ActivatableAbstractEntity<?>) session.load(prop.getType(), origValue.getId(), UPGRADE);
-            // if persistedValue active and does not equal to the entity being saving then need to decrement its refCount
-            if (!beingActivated && persistedValue.isActive() && !areEqual(entity, persistedValue)) { // avoid counting self-references
-                persistedValue.setIgnoreEditableState(true);
-                session.update(persistedValue.decRefCount());
-            }
-
-            // assign null as the property value to actually dereference activatable
+            // Original property value should not be null, otherwise property would not become dirty by assigning null.
+            decRefCount(entity, persistedEntity, prop, (ActivatableAbstractEntity<?>) prop.getOriginalValue(), session);
+            // Assign null as the property value to actually dereference the activatable.
             persistedEntity.set(propName, null);
-        } else { // otherwise, there could be either referencing (i.e. before property was null) or a reference change (i.e. from one value to some other)
-            // need to process previous property value
-            final AbstractEntity<?> origValue = (ActivatableAbstractEntity<?>) entity.getProperty(propName).getOriginalValue();
-            if (origValue != null && !areEqual(entity, origValue)) { // need to decrement refCount for the dereferenced entity, but avoid counting self-references
-                final ActivatableAbstractEntity<?> persistedValue = (ActivatableAbstractEntity<?>) session.load(prop.getType(), origValue.getId(), UPGRADE);
-                persistedValue.setIgnoreEditableState(true);
-                session.update(persistedValue.decRefCount());
-            }
-            // also need increment refCount for a newly referenced activatable
+        }
+        // Otherwise, `entity` began referencing `value`, and may have dereferenced the previous value if it was not `null`.
+        else {
+            decRefCount(entity, persistedEntity, prop, (ActivatableAbstractEntity<?>) prop.getOriginalValue(), session);
+
+            // The newly referenced activatable `value` needs to have its `refCount` incremented if:
+            // * `entity` is active;
+            // * and `value` is not a self-reference to `entity`;
+            // * and, if `entity` was concurrently modified, then its persisted version is still active.
+            //   If `entity` is concurrently deactivated, then it no longer affects `refCount` of `value`;
+            // * and the persisted version of `value` is active.
+            //   If `value` is concurrently deactivated, then we are in error -- active `entity` cannot reference inactive `value`.
             final ActivatableAbstractEntity<?> persistedValue = (ActivatableAbstractEntity<?>) session.load(prop.getType(), ((AbstractEntity<?>) value).getId(), UPGRADE);
-            if (!areEqual(entity, persistedValue)) { // avoid counting self-references
-                // Now let's check if the entity itself is an active activatable instance.
-                // This influences the decision to increment `refCount` for the newly referenced activatable.
-                // Otherwise, there is no reason to increment `refCount` for the referenced instance.
-                // In other words, an inactive entity does not count as an active referencer.
-                if (entity.<Boolean>get(ACTIVE)) {
-                    // If the referenced instance is not active (e.g. due to concurrent deactivation), then referencing is no longer relevant,
-                    // and an exception should be thrown.
+            if (!areEqual(entity, persistedValue)) {
+                if (entity.<Boolean>get(ACTIVE) && (persistedEntity.getVersion() <= entity.getVersion() || persistedEntity.<Boolean>get(ACTIVE))) {
                     if (!persistedValue.isActive()) {
-                        final String persistedEntityTitle = getEntityTitleAndDesc(persistedEntity.getType()).getKey();
-                        final String persistedValueTitle = getEntityTitleAndDesc(persistedValue.getType()).getKey();
-                        throw new EntityCompanionException("%s [%s] has a reference to already inactive %s [%s].".formatted(persistedEntityTitle, persistedEntity, persistedValueTitle, persistedValue));
+                        session.detach(persistedValue);
+                        throw mkInactiveReferenceFailure(prop, persistedValue);
                     }
                     else {
                         persistedValue.setIgnoreEditableState(true);
@@ -472,73 +481,109 @@ public final class PersistentEntitySaver<T extends AbstractEntity<?>> implements
         }
     }
 
-    /**
-     * In case an entity is activatable and has just been activated or deactivated, it is also necessary to make sure that all previously referenced activatables, which did not fall
-     * into the dirty category and are active, get their refCount increment or decremented accordingly.
-     *
-     * @param entity
-     * @param persistedEntity
-     * @param session
-     */
-    private void handleNonDirtyActivatableIfNecessary(final T entity, final T persistedEntity, final Session session) {
-        final MetaProperty<Boolean> activeProp = entity.getProperty(ACTIVE);
-        // was activatable entity just activated?
-        if (activeProp.isDirty()) {
-            // let's collect activatable not dirty properties from entity to check them for activity and also to increment their refCount
-            final Set<String> keyMembers = Finder.getKeyMembers(entity.getType()).stream().map(Field::getName).collect(Collectors.toSet());
+    /// Decrements the [ActivatableAbstractEntity#refCount] of an activatable entity assigned to a property of another activatable entity.
+    ///
+    /// `refCount` is decremented if and only if:
+    /// * `entity` was active (was made inactive) or remains active (active status was not changed);
+    /// * and `persistedEntity` is active (otherwise, a concurrent update deactivated it and took care of decrementing `refCount`);
+    /// * and the persisted version of `value` is active;
+    /// * and `value` is not equal to the entity being saved (is not a self-reference).
+    ///
+    /// @param entity  the referencing entity, activatable
+    /// @param persistedEntity  the persisted version of `entity`
+    /// @param mp  the property representing the activatable entity whose `refCount` should be decremented
+    /// @param value  the value of the property (not necessarily the current value, may be the original value)
+    /// @param session  the current session
+    private static <T extends AbstractEntity<?>> void decRefCount(
+            final T entity,
+            final T persistedEntity,
+            final MetaProperty<?> mp,
+            final @Nullable ActivatableAbstractEntity<?> value,
+            final Session session)
+    {
+        if (value != null) {
+            final MetaProperty<Boolean> activeProp = entity.getProperty(ACTIVE);
+            final boolean wasActive = activeProp.isDirty() ? activeProp.getOriginalValue() : activeProp.getValue();
+            final ActivatableAbstractEntity<?> persistedValue = (ActivatableAbstractEntity<?>) session.load(mp.getType(), value.getId(), UPGRADE);
+            if (wasActive && persistedEntity.<Boolean>get(ACTIVE) && persistedValue.isActive() && !areEqual(entity, persistedValue)) {
+                persistedValue.setIgnoreEditableState(true);
+                session.update(persistedValue.decRefCount());
+            }
+            else {
+                session.detach(persistedValue);
+            }
+        }
+    }
+
+    /// Processes `refCount`s of activatable entities that are among non-dirty properties of `entity`.
+    ///
+    /// Under ordinary conditions, where no concurrent modifications take place:
+    /// * If `entity` was deactivated, `refCount`s are decremented and [deactivatable dependencies][DeactivatableDependencies] are deactivated.
+    /// * If `entity` was activated, `refCount`s are incremented.
+    ///
+    /// If `entity` was concurrently modified, then these actions will be taken if and only if the persisted active status
+    /// is different from the active status in `entity`.
+    /// Otherwise, if persisted active status matches that of `entity`, then no action needs to be taken as all that work
+    /// would have already been done during the concurrent modification.
+    private void handleNonDirtyActivatableIfNecessary(final T entity, final T persistedEntity, final boolean persistedIsActive, final Session session) {
+        final var activeProp = entity.getProperty(ACTIVE);
+        if (activeProp.isDirty() && !entity.get(ACTIVE).equals(persistedIsActive)) {
+            final var keyMembers = domainMetadata.entityMetadataUtils().keyMembers(domainMetadata.forEntity(entity.getType()))
+                    .stream().map(PropertyMetadata::name).collect(toImmutableSet());
             for (final T2<String, Class<ActivatableAbstractEntity<?>>> propNameAndType : collectActivatableNotDirtyProperties(entity, keyMembers)) {
-                // get value from a persisted version of entity, which is loaded by Hibernate
-                // if a corresponding property is proxied due to an insufficient fetch model, its value is retrieved lazily by Hibernate
-                final AbstractEntity<?> value = persistedEntity.get(propNameAndType._1);
-                if (value != null) { // if there is actually some value
-                    // load activatable value
-                    final ActivatableAbstractEntity<?> persistedValue = session.load(propNameAndType._2, value.getId(), UPGRADE);
+                final var propName = propNameAndType._1;
+                final var propType = propNameAndType._2;
+                // Get value from a persisted version of entity, which is loaded by Hibernate.
+                // If the property is proxied, its value will be retrieved lazily by Hibernate.
+                final AbstractEntity<?> value = persistedEntity.get(propName);
+                if (value != null) {
+                    final ActivatableAbstractEntity<?> persistedValue = session.load(propType, value.getId(), UPGRADE);
                     persistedValue.setIgnoreEditableState(true);
-                    // if activatable property value is not a self-reference,
-                    // then need to check if it is active and if so increment its refCount.
-                    // otherwise, if activatable is not active, then we've got an erroneous situation that should prevent activation of entity.
+                    // Update `refCount` if the referenced entity is active and is not a self-reference.
+                    // If the entity being saved is active, but references an inactive entity, we have an erronous situation
+                    // and should prevent the activation of the entity being saved.
                     if (!areEqual(entity, persistedValue)) {
-                        if (activeProp.getValue()) { // is entity being activated?
-                            if (!persistedValue.isActive()) { // if activatable is not active then this is an error
-                                final String entityTitle = getEntityTitleAndDesc(entity.getType()).getKey();
-                                final String persistedValueTitle = getEntityTitleAndDesc(propNameAndType._2).getKey();
-                                throw new EntityCompanionException(format("%s [%s] has a reference to already inactive %s [%s].", entityTitle, entity, persistedValueTitle, persistedValue));
-                            } else { // otherwise, increment refCount
+                        if (entity.get(ACTIVE)) {
+                            if (!persistedValue.isActive()) {
+                                session.detach(persistedValue);
+                                // This property may be proxied, thus we cannot use `mkInactiveReferenceFailure`.
+                                final var entityTitle = getEntityTitleAndDesc(entity.getType()).getKey();
+                                final var propTitle = getTitleAndDesc(propName, entity.getType()).getKey();
+                                final var valueEntityTitle = getEntityTitleAndDesc(value.getType()).getKey();
+                                throw new EntityCompanionException(format(ERR_INACTIVE_REFERENCES, propTitle, entityTitle, entity, valueEntityTitle, persistedValue));
+                            }
+                            else {
                                 session.update(persistedValue.incRefCount());
                             }
-                        } else if (persistedValue.isActive()) { // is entity being deactivated, but is referencing an active activatable?
+                        }
+                        else if (persistedValue.isActive()) {
                             session.update(persistedValue.decRefCount());
                         }
+                        else {
+                            session.detach(persistedValue);
+                        }
+                    }
+                    else {
+                        session.detach(persistedValue);
                     }
                 }
             }
 
-            // separately need to perform deactivation of deactivatable dependencies in case where the entity being saved is deactivated
-            if (!activeProp.getValue()) {
+            // Deactivate deactivatable dependencies if the entity being saved is being deactivated.
+            if (!entity.<Boolean>get(ACTIVE) && !entity.get(ACTIVE).equals(persistedIsActive)) {
                 final List<? extends ActivatableAbstractEntity<?>> deactivatables = findActiveDeactivatableDependencies((ActivatableAbstractEntity<?>) entity, coFinder);
                 for (final ActivatableAbstractEntity<?> deactivatable : deactivatables) {
                     deactivatable.set(ACTIVE, false);
-                    final Result result = deactivatable.isValid();
-                    if (result.isSuccessful()) {
-                        // persisting of deactivatables should go through the logic of companion save
-                        // and cannot be persisted by just using a call to Hibernate Session
-                        final CommonEntityDao co = coFinder.find(deactivatable.getType());
-                        co.save(deactivatable);
-                    } else {
-                        throw result;
-                    }
+                    deactivatable.isValid().ifFailure(Result::throwRuntime);
+                    // Persisting of deactivatables should go through the logic of companion save, they cannot be persisted through Hibernate Session directly.
+                    final CommonEntityDao co = coFinder.find(deactivatable.getType());
+                    co.save(deactivatable);
                 }
             }
         }
     }
 
-    /**
-     * This is a convenient predicate method that identifies whether the specified property needs to be processed as an activatable reference.
-     *
-     * @param entity
-     * @param prop
-     * @return
-     */
+    /// This predicate identifies whether the specified property needs to be processed as an activatable reference.
     private boolean shouldProcessAsActivatable(final T entity, final MetaProperty<?> prop) {
         final boolean shouldProcessAsActivatable;
         if (prop.isActivatable() && entity instanceof ActivatableAbstractEntity && isNotSpecialActivatableToBeSkipped(prop)) {
@@ -650,26 +695,27 @@ public final class PersistentEntitySaver<T extends AbstractEntity<?>> implements
             final Set<String> keyMembers = Finder.getKeyMembers(entity.getType()).stream().map(Field::getName).collect(toSet());
             final Set<MetaProperty<? extends ActivatableAbstractEntity<?>>> activatableDirtyProperties = collectActivatableDirtyProperties(entity, keyMembers);
 
-            for (final MetaProperty prop : activatableDirtyProperties) {
-                if (prop.getValue() != null) {
-                    // need to update refCount for the activatable entity
-                    final ActivatableAbstractEntity<?> value = (ActivatableAbstractEntity<?>) prop.getValue();
-                    final ActivatableAbstractEntity<?>  persistedEntity = (ActivatableAbstractEntity<?> ) session.load(value.getType(), value.getId(), UPGRADE);
-                    // the returned value could already be inactive due to some concurrent modification.
-                    // therefore, it is critical to ensure that the property of the current entity being saved can still accept the obtained value if it is inactive.
+            // Update `refCount` for each referenced active entity.
+            for (final MetaProperty<? extends ActivatableAbstractEntity<?>> prop : activatableDirtyProperties) {
+                final var value = prop.getValue();
+                if (value != null) {
+                    // `UPGRADE` is not strictly necessary to ensure the safety of concurrent updates to `refCount`.
+                    // With `UPGRADE`, `session.load()` will block if there is another transaction (in another thread) that runs this same code until it reaches `session.clear()`.
+                    // This ensures that `session.load()` always returns the latest persisted state.
+                    // Without `UPGRADE`, two transactions (in two threads) can obtain the result of `session.load` concurrently, as it will not block.
+                    // Nevertheless, in such case only the first thread that calls `session.flush()` will successfully modify the persistent state,
+                    // while the other one will fail with StaleObjectException.
+                    // To sum up:
+                    // * With `UPGRADE`: safe concurrent updates, blocking.
+                    // * Without `UPGRADE`: safe concurrent updates, non-blocking, but may throw an exception.
+                    // We should use `UPGRADE` if users would rather wait a little instead of seeing an error.
+                    // The wait time should be insignificant, and, moreover, concurrent modifications are rare in general.
+                    final var persistedEntity = (ActivatableAbstractEntity<?>) session.load(value.getType(), value.getId(), UPGRADE);
+                    // If the referenced instance is not active (e.g. due to concurrent deactivation), then referencing is no longer relevant,
+                    // and we are in error.
                     if (!persistedEntity.isActive()) {
-                        prop.setValue(persistedEntity, true);
-
-                        final Result res = prop.getFirstFailure();
-                        if (res != null) {
-                            session.detach(persistedEntity);
-                            // the last invalid value would now be set to persistedEntity, which is proxied by Hibernate and cannot be serialised
-                            // this is why we need to reset the last invalid value to the re-fetched value, which is effectively being revalidated
-                            final IEntityDao co = coFinder.find(value.getType(), true /* uninstrumented */);
-                            final ActivatableAbstractEntity<?> refetchedValue = (ActivatableAbstractEntity<?>) co.findById(value.getId(), FetchModelReconstructor.reconstruct(value));
-                            prop.setLastInvalidValue(refetchedValue);
-                            throw res;
-                        }
+                        session.detach(persistedEntity);
+                        throw mkInactiveReferenceFailure(prop, persistedEntity);
                     }
                     persistedEntity.setIgnoreEditableState(true);
                     session.update(persistedEntity.incRefCount());
@@ -694,6 +740,23 @@ public final class PersistentEntitySaver<T extends AbstractEntity<?>> implements
         
         return t2(newEntityId,
                   entityFetchOption.map(fetch -> findById.find(newEntityId, fetch, fillModel.get())).orElse(entity));
+    }
+
+    /// Creates a failed validation result based on [EntityExistsValidator#ERR_ENTITY_EXISTS_BUT_NOT_ACTIVE]
+    /// with `referencedEntity` in the role of the inactive entity.
+    /// This result is then associated with `mp` via [MetaProperty#setEntityExistsValidationResult(Result)], which fits into the standard validation lifecycle
+    /// (if this result becomes outdated, it will be correctly replaced during revalidation).
+    @SuppressWarnings({"unchecked", "rawtypes"})
+    private Result mkInactiveReferenceFailure(final MetaProperty mp, final ActivatableAbstractEntity<?> referencedEntity) {
+        final var result = failure(ERR_ENTITY_EXISTS_BUT_NOT_ACTIVE.formatted(getEntityTitleAndDesc(referencedEntity.getType()).getKey(), referencedEntity));
+        mp.setEntityExistsValidationResult(result);
+        // `persistedEntity` may be proxied by Hibernate and cannot be serialised, hence cannot be set as the last invalid value.
+        // For this reason we use a refetched instance.
+        // NOTE: Sometimes `persistedEntity` itself is not proxied, but its contents are (values of entity-typed properties).
+        final IEntityDao co = coFinder.find(referencedEntity.getType(), true /* uninstrumented */);
+        final var refetched = co.findById(referencedEntity.getId(), FetchModelReconstructor.reconstruct(referencedEntity));
+        mp.setLastInvalidValue(refetched);
+        return result;
     }
 
     /**
